remove all "_desktop"

--- a/index.html
+++ b/index.html
@@ -1742,7 +1742,7 @@
 					</div>
 				</amp-carousel>
 				<div class="services-cards-list">
-					<div class="service-card service-card_desktop">
+					<div class="service-card">
 						<div class="service-card__pic">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
@@ -1834,7 +1834,7 @@
 						<hr class="service-card__vertical-line" />
 						<div class="service-card__description">Renew your spirit and<br />invigorate your soul</div>
 					</div>
-					<div class="service-card service-card_desktop">
+					<div class="service-card">
 						<div class="service-card__pic">
 							<svg
 								width="46"
@@ -1899,7 +1899,7 @@
 						<hr class="service-card__vertical-line" />
 						<div class="service-card__description">Want a break from<br />the action relax</div>
 					</div>
-					<div class="service-card service-card_desktop">
+					<div class="service-card">
 						<div class="service-card__pic">
 							<svg
 								width="62"
@@ -2366,7 +2366,7 @@
 					</div>
 				</amp-carousel>
 				<div class="services-cards-list">
-					<div class="service-card service-card_desktop">
+					<div class="service-card">
 						<div class="service-card__pic">
 							<svg
 								width="50"
@@ -2438,7 +2438,7 @@
 							Treat yourself tó most<br />relaxing hour of your<br />life!
 						</div>
 					</div>
-					<div class="service-card service-card_desktop">
+					<div class="service-card">
 						<div class="service-card__pic">
 							<svg
 								width="34"
@@ -2490,7 +2490,7 @@
 							A trim on the bang<br />area. Include scalp<br />massage
 						</div>
 					</div>
-					<div class="service-card service-card_desktop">
+					<div class="service-card">
 						<div class="service-card__pic">
 							<svg
 								width="63"
