$self for modifiers

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
 						<a href="" class="nav-menu__item">Offers & Deals</a>
 						<a href="" class="nav-menu__item">Shop</a>
 					</div>
-					<button class="action-button header__action-button">
-						<div class="action-button__content action-button__content_black">Book now</div>
+					<button class="action-button action-button--text_black header__action-button">
+						<div class="action-button__content">Book now</div>
 					</button>
 				</header>
 				<div class="action-block">
 					<h1 class="title action-block__single-title">
 						Spa<br /><span class="title__and-sign">&</span> Beauty Center
 					</h1>
-					<button class="action-button action-block__single-action-button">
+					<button class="action-button action-button--text_light action-block__single-action-button">
 						<div class="action-button__content">Book now</div>
 					</button>
 					<div class="action-block__titles">
@@ -92,10 +92,10 @@
 						<h2 class="subtitle">Relax, Indulge, Enjoy and Love Yourself</h2>
 					</div>
 					<div class="action-block__action-buttons">
-						<button class="action-button">
+						<button class="action-button action-button--text_light">
 							<div class="action-button__content">Book now</div>
 						</button>
-						<button class="action-button">
+						<button class="action-button action-button--text_light">
 							<div class="action-button__content">Contact us</div>
 						</button>
 					</div>
@@ -1525,7 +1525,7 @@
 			</div>
 			<div class="info">
 				<div class="info__card-wrapper">
-					<div class="info-card">
+					<div class="info-card info-card--font-size_12-22">
 						<div class="info-card__pic">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
@@ -1553,7 +1553,7 @@
 						<div class="info-card__title">Contacts</div>
 						<div class="info-card__details">T: 096 788 98 76<br />info@solar.com</div>
 					</div>
-					<div class="info-card">
+					<div class="info-card info-card--font-size_12-22">
 						<div class="info-card__pic">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
@@ -1575,7 +1575,7 @@
 						<div class="info-card__title">Working Hours</div>
 						<div class="info-card__details">Mon-Fri: 8:00am - 11:30pm<br />Sat: 9:00am - 10:00pm</div>
 					</div>
-					<div class="info-card">
+					<div class="info-card info-card--font-size_12-22">
 						<div class="info-card__pic">
 							<svg
 								xmlns="http://www.w3.org/2000/svg"
