structure remake + font module for extending

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1" />
 		<meta name="author" content="Viacheslav Matvieiev" />
 		<style amp-custom>
-			@import url('./index.css');
+			@import url('./styles/index.css');
 		</style>
 		<noscript>
 			<style amp-boilerplate>
